fikser bug i ie 11 som gjorde at sykefraværboks ikke wrappet tekst

--- a/src/App/Hovedside/TjenesteBoksContainer/TjenesteBoksContainer.less
+++ b/src/App/Hovedside/TjenesteBoksContainer/TjenesteBoksContainer.less
@@ -1,7 +1,7 @@
 @import '~nav-frontend-core/less/_variabler';
 
 .tjenesteboks-container {
-    display: flex;
+    display: inline-block;;
     width: 100%;
     flex-direction: column;
     align-items: center;
